--- a/docs/daily_logs/2026-01-21.md
+++ b/docs/daily_logs/2026-01-21.md
@@ -274,6 +274,164 @@ refactor: 감정 선택 UI 빈 공간 제거 및 선택 효과 개선
 Fixes: 감정 선택 UI 빈 공간 어색함
 ```
 
+---
+
+### 7. 감정 선택 UI 최종 완성 (통일된 크기 + 간격 조정)
+
+**작업 내용:**
+- 캐릭터 이미지 크기 통일
+  - 모든 이미지를 고정 크기 75x75로 통일
+  - 제일 큰 이미지 기준으로 설정
+  - `itemSize` 계산 제거, 고정 크기 사용
+- 바깥 사각형과 이미지 동일 형태
+  - Container와 Image 모두 75x75
+  - padding 완전 제거
+  - `BoxFit.cover`로 박스를 완전히 채움
+  - BorderRadius 20px로 동일하게 적용
+- 그리드 간격 최적화
+  - 가로 간격: `screenWidth * 0.03` → `12px` (고정)
+  - 세로 간격: `screenHeight * 0.015` → `10px` (줄임)
+  - childAspectRatio: `0.85` → `0.95` (더 컴팩트)
+- 텍스트 크기 고정
+  - `screenWidth * 0.03` → `11px` (고정)
+
+**수정 파일:**
+```
+🔧 수정: lib/features/diary/views/emotion_selection_page/emotion_selection_page.dart
+```
+
+**커밋 메시지 (복사용):**
+```
+refactor: 감정 선택 UI 크기 통일 및 간격 최적화
+
+- 모든 캐릭터 이미지 75x75 고정 크기
+- 바깥 사각형과 이미지 크기 완전 동일
+- padding 완전 제거 (이미지가 박스를 채움)
+- BoxFit.cover로 빈 공간 제거
+- 세로 간격 줄임 (15px→10px)
+- 가로 간격 고정 (12px)
+- childAspectRatio 0.95로 더 컴팩트하게
+
+Fixes: 이미지 크기 불일치, 세로 간격 과다
+```
+
+---
+
+### 8. 감정 선택 UI 완성도 개선 (공백 제거)
+
+**작업 내용:**
+- 대표 캐릭터 바깥 박스 제거
+  - 흰색 Container 완전 제거
+  - 이미지만 둥글게 표시 (ClipRRect)
+  - 크기 증가 (0.25 → 0.3)
+  - BoxFit.cover로 완전히 채움
+- 선택 시 테두리 둥근 정도 완벽 일치
+  - 미선택: borderRadius 20
+  - 선택: 
+    - 바깥 border: borderRadius 20
+    - 안쪽 padding: 3.5px
+    - 이미지 borderRadius: 16.5 (20 - 3.5)
+  - 흰색 공백 완전 제거
+  - 배경 투명으로 설정
+
+**수정 파일:**
+```
+🔧 수정: lib/features/diary/views/emotion_selection_page/emotion_selection_page.dart
+```
+
+**커밋 메시지 (복사용):**
+```
+fix: 감정 선택 UI 흰색 공백 완전 제거
+
+- 대표 캐릭터 바깥 박스 제거 (이미지만 표시)
+- 선택 시 테두리 둥근 정도 완벽 일치
+- 배경 투명으로 설정
+- padding으로 border width만큼 안쪽 처리
+- 이미지 borderRadius 동적 계산 (20 - 3.5 = 16.5)
+- 흰색 공백 완전 제거
+
+Fixes: 선택 시 흰색 공백 표시, 대표 캐릭터 불필요한 박스
+```
+
+---
+
+### 9. AI 입력 검증 로직 강화 (오타 및 의미 없는 입력 감지)
+
+**작업 내용:**
+- 같은 문자 반복 감지 강화
+  - 2번 이상 반복 + 5글자 이하 → 무효 (예: "fff", "kkk")
+  - 4번 이상 반복 → 무조건 무효 (예: "aaaa")
+- 영문자 패턴 검증 추가
+  - 영문 3-5글자 중 모음 없으면 무효 (예: "fff", "ddd")
+  - 의미 있는 영단어 예외 처리 (yes, no, ok, good, bad, help)
+  - "fff", "ddd", "sss" 등 패턴 추가
+- 한글 자음/모음만 있는 경우 감지
+  - "ㅋㅋㅋ", "ㅠㅠ" 등 완벽하게 차단
+- 문자 비율 검증
+  - 같은 문자가 80% 이상 → 무효 (예: "ggggg")
+
+**수정 파일:**
+```
+🔧 수정: lib/core/ai/gemini/gemini_service.dart
+```
+
+**커밋 메시지 (복사용):**
+```
+feat: AI 입력 검증 로직 대폭 강화
+
+- 같은 문자 반복 감지 강화 (fff, kkk 등)
+- 영문자 모음 유무 검사 추가
+- 한글 자음/모음만 입력 차단
+- 문자 비율 검증 (80% 이상 같은 문자)
+- 의미 있는 영단어 예외 처리
+- 8가지 검증 규칙으로 확장
+
+Fixes: fff, kkk, ddd 등 오타를 설렘으로 잘못 해석
+```
+
+**테스트 케이스:**
+```
+Input: "fff"        → ❌ 무효 (같은 문자 3번 반복 + 모음 없음)
+Input: "kkk"        → ❌ 무효 (같은 문자 3번 반복 + 모음 없음)
+Input: "ddd"        → ❌ 무효 (같은 문자 3번 반복 + 모음 없음)
+Input: "asdf"       → ❌ 무효 (랜덤 키 패턴)
+Input: "ㅋㅋㅋ"     → ❌ 무효 (한글 자음만)
+Input: "ㅠㅠㅠ"     → ❌ 무효 (한글 모음만)
+Input: "ggggg"      → ❌ 무효 (80% 이상 같은 문자)
+Input: "yes"        → ✅ 유효 (의미 있는 영단어)
+Input: "good"       → ✅ 유효 (의미 있는 영단어)
+Input: "오늘 힘들었어" → ✅ 유효 (정상 입력)
+```
+
+**개선 효과:**
+```
+Before:
+❌ 선택 시 이미지와 테두리 사이 흰색 공백
+❌ 대표 캐릭터 주변 흰색 박스
+❌ borderRadius 불일치로 어색함
+
+After:
+✅ 선택 시 공백 완전 제거
+✅ 대표 캐릭터 이미지만 표시
+✅ borderRadius 완벽 일치
+✅ 배경 투명으로 깔끔함
+```
+
+**개선 효과:**
+```
+Before:
+❌ 이미지 크기가 itemSize 계산으로 가변적
+❌ padding으로 이미지와 박스 크기 불일치
+❌ 세로 간격이 너무 넓음 (화면 높이 기준)
+❌ 텍스트 크기도 화면 너비 기준 가변
+
+After:
+✅ 모든 이미지 75x75 통일
+✅ 바깥 사각형과 이미지 크기 완전 동일
+✅ 세로 간격 33% 줄임 (15px→10px)
+✅ 모든 크기 고정으로 일관성 확보
+```
+
 **개선 효과:**
 ```
 Before:
