--- a/docs/daily_logs/2026-01-21.md
+++ b/docs/daily_logs/2026-01-21.md
@@ -462,10 +462,17 @@ feat: 자유일기 UI 전면 개편 (AI 채팅일기 스타일)
 Improves: 자유일기 UI/UX 대폭 개선
 ```
 
+**Bug Fix:**
+- `intl` locale 초기화 에러 수정
+  - `DateFormat('yyyy년 M월 d일 (E)', 'ko_KR')` 제거
+  - 커스텀 `_formatDate()` 메서드로 대체
+  - `Locale data has not been initialized` 에러 해결
+
 **테스트 체크리스트:**
 ```
-✅ 자유일기 작성 페이지 진입
+✅ 자유일기 작성 페이지 진입 (에러 없음)
 ✅ 날짜 선택 동작 확인
+✅ 한국어 날짜 포맷 표시 (2026년 1월 21일 (화))
 ✅ 감정 캐릭터 이미지 표시 (4x3 그리드)
 ✅ 감정 최대 2개 선택 제한
 ✅ 감정 강도 슬라이더 동작
@@ -476,6 +483,166 @@ Improves: 자유일기 UI/UX 대폭 개선
 ✅ 일기 저장 정상 동작
 ✅ 키보드 외부 터치 시 자동 닫힘
 ✅ 다양한 화면 크기에서 오버플로우 없음
+```
+
+---
+
+### 11. 자유일기 UI 세부 개선 (사용자 피드백 반영)
+
+**작업 내용:**
+- 감정 선택 그리드 오버플로우 수정
+  - `LayoutBuilder`로 완전 적응형 UI 적용
+  - `childAspectRatio` 동적 계산
+  - `mainAxisSpacing` 증가 (10 → 18)
+  - `Flexible` 위젯으로 텍스트 오버플로우 방지
+- 감정 강도 슬라이더 개선
+  - `SliderTheme`로 굵기 조정 (`trackHeight: 3.0`)
+  - 썸/오버레이 크기 최적화
+  - 하단 패딩 축소 (16 → 8)
+- 설정 섹션에 "개발중" 배지 추가
+  - 주황색 배지로 명확히 표시
+- 저장 버튼 아이콘 제거
+  - `Icons.save` 제거 (깔끔한 UI)
+- 그림 그리기 패키지 평가 완료
+
+**수정 파일:**
+```
+🔧 수정: lib/features/diary/views/diary_write_page/diary_write_page.dart
+```
+
+**커밋 메시지 (복사용):**
+```
+fix: 자유일기 UI 세부 개선
+
+- 감정 선택 그리드 오버플로우 수정 (LayoutBuilder)
+- 감정 강도 슬라이더 굵기 조정 (3.0px)
+- 슬라이더 하단 공백 축소 (16 → 8)
+- 설정 섹션 "개발중" 배지 추가
+- 저장 버튼 아이콘 제거
+
+Fixes: 오버플로우, 슬라이더 굵기, 설정 명시
+```
+
+**그림 그리기 패키지 평가:**
+
+**✅ 현재 구현 기능 (양호):**
+1. 기본 그리기 (펜/터치)
+2. 색상 선택 (20가지 색상 팔레트)
+3. 브러시 크기 (8단계: 2-24px)
+4. 지우개 (브러시 크기 2배)
+5. 실행 취소/다시 실행
+6. 전체 지우기
+7. PNG 내보내기 (고해상도 3.0x)
+
+**⚠️ 개선 필요 사항:**
+1. **레이어 시스템 부재** - 다층 그림 불가
+2. **도형 도구 없음** - 원, 사각형, 선 등
+3. **텍스트 입력 없음** - 감정 텍스트 추가 불가
+4. **이미지 불러오기 없음** - 배경 이미지 불가
+5. **스티커/이모지 없음** - 감정 표현 제한적
+6. **필터/효과 없음** - 블러, 그림자 등
+7. **확대/축소/이동 없음** - 세밀한 작업 어려움
+8. **자동 저장 없음** - 실수로 닫으면 손실
+
+**📊 종합 평가:**
+
+**사용성:** ⭐⭐⭐☆☆ (3/5)
+- 기본 그리기는 충분하지만 고급 기능 부족
+- 일기용 간단한 낙서/스케치에는 적합
+- 전문적인 그림에는 부족
+
+**추천 사항:**
+1. **현재 상태로 유지해도 OK** (간단한 감정 표현용)
+2. **단기 개선안:**
+   - 도형 도구 추가 (원, 하트, 별 등)
+   - 감정 스티커 추가 (😊😢😡 등)
+   - 자동 저장 기능
+3. **장기 개선안:**
+   - 외부 패키지 도입 (`flutter_painter`, `drawing_board`)
+   - 레이어 시스템
+   - 확대/축소/팬 제스처
+
+**결론:**
+✅ **현재 상태로 출시 가능** (MVP 단계)
+⚠️ **추후 개선 권장** (사용자 피드백 수집 후)
+```
+
+---
+
+### 12. 그림 그리기 패키지 대폭 개선 (단기 개선안 적용)
+
+**작업 내용:**
+- 감정 스티커 추가 (15개)
+  - 😊😢😡😱😍🤗😴🤔😎🥳❤️💔⭐✨🌈
+  - 탭으로 스티커 추가
+  - 중앙 위치에 배치
+- 도형 도구 추가 (3종)
+  - 원 (circle)
+  - 하트 (heart)
+  - 별 (star)
+  - 드래그로 크기 조절
+- 자동 저장 기능
+  - `SharedPreferences`로 임시 저장
+  - 앱 종료/재시작 시 복구
+  - 완료 시 자동 삭제
+- 아키텍처 개선
+  - `DrawingElement` 추상 클래스
+  - `StrokeElement`, `ShapeElement`, `StickerElement` 구현
+  - JSON 직렬화/역직렬화
+- UI/UX 개선
+  - 도구 아이콘 시각화
+  - 스티커 팔레트 UI
+  - 도형 미리보기 (드래그 중)
+
+**수정 파일:**
+```
+🔧 전면 개편: lib/features/diary/views/drawing_canvas_page.dart
+🔧 미세 조정: lib/features/diary/views/diary_write_page/diary_write_page.dart
+```
+
+**커밋 메시지 (복사용):**
+```
+feat: 그림 그리기 대폭 개선 (스티커 + 도형 + 자동저장)
+
+- 감정 스티커 15개 추가 (😊😢😡😱😍 등)
+- 도형 도구 3종 추가 (원/하트/별)
+- 자동 저장 및 복구 기능
+- DrawingElement 아키텍처 (추상 클래스)
+- JSON 직렬화/역직렬화
+- 도형 드래그 미리보기
+- 감정 선택 UI 오버플로우 수정 (간격 18→22)
+
+Improves: 그림 그리기 사용성 대폭 향상
+Fixes: 바텀 오버플로우
+```
+
+**테스트 체크리스트:**
+```
+✅ 그림 그리기 페이지 진입
+✅ 펜 도구로 자유 그리기
+✅ 지우개로 지우기
+✅ 원 도구로 드래그 (미리보기)
+✅ 하트 도구로 드래그
+✅ 별 도구로 드래그
+✅ 스티커 버튼 → 15개 스티커 표시
+✅ 스티커 선택 → 화면 중앙 배치
+✅ 실행 취소/다시 실행
+✅ 전체 지우기
+✅ 완료 → 파일 저장
+✅ 앱 종료 → 재시작 → 자동 복구 확인
+✅ 감정 선택 UI 오버플로우 없음
+```
+
+**개선 효과:**
+```
+Before: 기본 그리기만 (⭐⭐⭐☆☆)
+After:  스티커 + 도형 + 자동저장 (⭐⭐⭐⭐☆)
+
+추가 기능:
+1. ✅ 감정 스티커 (15개)
+2. ✅ 도형 도구 (원/하트/별)
+3. ✅ 자동 저장
+4. ⭐ 사용자 경험 대폭 향상
 ```
 
 **개선 효과:**
