--- a/docs/daily_logs/2026-01-21.md
+++ b/docs/daily_logs/2026-01-21.md
@@ -1,5 +1,8 @@
 # 개발 일지 - 2026-01-21
 
+> **작업 시간:** 오전 10:00 ~ 오후 11:00 (약 13시간)
+> **주요 성과:** 그림 그리기 완전 개편, AI 입력 검증 강화, 자유일기 UI 오버홀
+
 ## ✅ 완료된 기능
 
 ### 1. AI 채팅 UI 전면 개편 (감정 캐릭터 시스템)
@@ -47,7 +50,102 @@ feat: AI 채팅 UI 전면 개편 - 감정 캐릭터 시스템 통합
 
 ---
 
-### 2. AI 채팅 UI/UX 개선 (사용자 피드백 반영)
+### 2. 그림 그리기 기능 완전 개편 ⭐
+**작업 내용:**
+- 펜/지우개 크기 독립 관리 (중복 제거)
+- 지우개 UX 개선 (첫 클릭=활성화, 재클릭=크기 선택)
+- 선택된 도구 명확한 표시 (파란 테두리 + 배경색)
+- 뒤로가기 저장 로직 완벽 수정 (dispose 자동 저장 제거)
+- AppBar/도구바 영역 그리기 방지 (LayoutBuilder + 좌표 검증)
+- 도구 재배치 (중요도 순: 펜/지우개 앞, 도형/스티커 뒤)
+- 가로 스크롤 도구바 (오버플로우 방지)
+- 별(star) 도구 제거 (UI 개선)
+- 앱 로고 Emoti2로 변경 및 크기 조정
+
+**수정 파일:**
+```
+🔧 lib/features/diary/views/drawing_canvas_page.dart
+📝 pubspec.yaml (앱 아이콘 설정)
+```
+
+**커밋 메시지 (복사용):**
+```
+feat: 그림 그리기 완전 개편 + 모든 크리티컬 버그 해결
+
+펜/지우개 분리:
+- _currentPenWidth와 _currentEraserWidth로 독립 관리
+- 각 도구가 독립적인 크기 유지
+
+UX 대폭 개선:
+- 지우개 첫 클릭=활성화, 재클릭=크기 선택
+- 선택된 도구에 파란 테두리 + 배경색 표시
+- 도구 중요도별 재배치 (펜/지우개 앞, 도형 뒤)
+
+저장 로직 완벽 수정:
+- dispose의 자동 저장 제거
+- 사용자 선택에만 반응
+- 뒤로가기 '저장 안함' 완벽 작동
+
+영역 제한:
+- AppBar/도구바 영역 그리기 방지
+- LayoutBuilder + 좌표 검증으로 영역 제한
+
+Fixes: #저장로직 #크기분리 #UX개선 #영역제한
+Closes: 그림 그리기 모든 이슈 해결
+```
+
+---
+
+### 3. 자유일기 UI 오버홀 + 감정 선택 개선
+**작업 내용:**
+- "선택 없음" 옵션 추가 (대표 캐릭터)
+- 11개 선택지 (10개 감정 + 선택 없음)
+- 오버플로우 수정 (adaptive UI)
+- Flexible 위젯 에러 수정
+
+**수정 파일:**
+```
+🔧 lib/features/diary/views/diary_write_page/diary_write_page.dart
+```
+
+---
+
+### 4. 첫 로그인 실패 버그 수정 + UI 개선
+**작업 내용:**
+- 첫 Google 로그인 시도 실패 버그 수정
+  - 원인: 무조건 `signOut()` 호출
+  - 해결: 세션 존재 여부 확인 후 조건부 실행
+- AI 채팅 글자 색상 진하게 조정
+  - textPrimary: `#1E293B` → `#0F172A`
+  - textSecondary: `#64748B` → `#475569`
+
+**수정 파일:**
+```
+🔧 lib/core/services/auth_service.dart
+🔧 lib/theme/app_colors.dart
+📝 docs/troubleshooting.md
+```
+
+**커밋 메시지 (복사용):**
+```
+fix: 첫 Google 로그인 시도 실패 버그 수정 + UI 개선
+
+로그인 버그:
+- signInWithGoogle()에서 조건부 signOut() 적용
+- 세션이 있을 때만 정리하도록 변경
+- 첫 시도부터 정상 작동 보장
+
+UI 개선:
+- AI 채팅 글자 색상 진하게 (#0F172A)
+- 가독성 향상
+
+Fixes: #첫로그인실패
+Improves: #채팅가독성
+```
+
+---
+
+### 5. AI 채팅 UI/UX 개선 (사용자 피드백 반영)
 
 **작업 내용:**
 - 앱바 타이틀 간소화 (캐릭터 아이콘만 표시)
