feat: 날짜 별 일기 달력 생성

--- a/docs/daily_logs/2026-01-22.md
+++ b/docs/daily_logs/2026-01-22.md
@@ -498,4 +498,12 @@ Implements: #홈화면 #UX재설계 #성장메타포 #시각화
 | 다크모드 지원 페이지 | 2개 | 10개+ | **전면 적용** 🌙 |
 | 신규 문서 | - | 2개 | **문서화 강화** 📝 |
 
-
+일단 오늘 여기까지 하고 담에 설계해야하거나 보완할 점 말할게 이것들을 플랜에 적고 기존완성한 플랜은 체크표시해놔. 코드짜라는거아님
+1. 자유일기 캐릭터들 오버플로우문제 해결안됨.
+2. 홈화면 UI는 얼추 완성
+3. 그 다음 진행할 것이 일기목록과 상세페이지 ui 변경 및 리팩토링(현재 ui 변경한것은 의도대로되지않음.)
+- 앱바 구성 다른페이지와 비슷하게 변경
+- 기존 이모지들 없애고 캐릭터들 이미지로 대체
+- 구조 변경
+4. 마이페이지(프로필페이지)가 필요해보임
+5. AI 감정 분석 제대로 되는지 확인 + UI 변경 
